--- a/Testing/VME/DataPipes/CMakeLists.txt
+++ b/Testing/VME/DataPipes/CMakeLists.txt
@@ -3,20 +3,20 @@ PROJECT (mafDataPipes)
 IF(MAF_BUILD_MAFDLL)
   LINK_LIBRARIES(mafDLL)
 ELSE(MAF_BUILD_MAFDLL)
-  LINK_LIBRARIES(mafTests mafCore vtkMAF)
+  LINK_LIBRARIES(mafTests mafCore vtkMAF mafService)
 ENDIF (MAF_BUILD_MAFDLL)
 
 #-----------------------------------------------------------------------------
 # tests using cppunit testing framework
 #-----------------------------------------------------------------------------
 SET(PROJECT_SRCS 
-	vtkMAFDataPipeTest.h vtkMAFDataPipeTest.cpp
-	mafDataPipeInterpolatorTest.h mafDataPipeInterpolatorTest.cpp
-	mafDataPipeInterpolatorVTKTest.h mafDataPipeInterpolatorVTKTest.cpp
-	mafDataPipeCustomTest.h mafDataPipeCustomTest.cpp
-	mafDataPipeInterpolatorScalarMatrixTest.h mafDataPipeInterpolatorScalarMatrixTest.cpp
-	mafDataPipeCustomProberTest.h mafDataPipeCustomProberTest.cpp
-	mafDataPipesTests.h mafDataPipesTests.cpp
+	vtkMAFDataPipeTest.h 						vtkMAFDataPipeTest.cpp
+	mafDataPipeInterpolatorTest.h 				mafDataPipeInterpolatorTest.cpp
+	mafDataPipeInterpolatorVTKTest.h 			mafDataPipeInterpolatorVTKTest.cpp
+	mafDataPipeCustomTest.h 					mafDataPipeCustomTest.cpp
+	mafDataPipeInterpolatorScalarMatrixTest.h 	mafDataPipeInterpolatorScalarMatrixTest.cpp
+	mafDataPipeCustomProberTest.h 				mafDataPipeCustomProberTest.cpp
+	mafDataPipesTests.h 						mafDataPipesTests.cpp
 )
 
 ADD_EXECUTABLE(mafDataPipesTests ${PROJECT_SRCS})
