--- a/Testing/vtkMAF/CMakeLists.txt
+++ b/Testing/vtkMAF/CMakeLists.txt
@@ -3,7 +3,7 @@ PROJECT (vtkMAF_TEST)
 IF(MAF_BUILD_MAFDLL)
   LINK_LIBRARIES(mafDLL)
 ELSE(MAF_BUILD_MAFDLL)
-  LINK_LIBRARIES(mafTests vtkMAF vtkGraphics vtkRendering mafCommon)
+  LINK_LIBRARIES(mafTests vtkMAF vtkGraphics vtkRendering mafCommon mafService)
 ENDIF (MAF_BUILD_MAFDLL)
 
 #ADD_EXECUTABLE(vtkMAFTest vtkMAFTest.cxx)
