Created View Isosurface Compound Plugged new view in ExampleApp

--- a/Views/CMakeLists.txt
+++ b/Views/CMakeLists.txt
@@ -57,6 +57,8 @@ SET(PROJECT_SRCS
   mafViewSliceNotInterpolated.h
   mafViewSliceNotInterpolatedCompound.cpp
   mafViewSliceNotInterpolatedCompound.h
+  mafViewIsosurfaceCompound.cpp
+  mafViewIsosurfaceCompound.h
 )
 
 # List libraries that are needed by this project.
