Created Test for View Isosurface Compound

--- a/Testing/Views/CMakeLists.txt
+++ b/Testing/Views/CMakeLists.txt
@@ -31,6 +31,7 @@ SET(PROJECT_SRCS
 	mafViewSliceOnCurveTest.h mafViewSliceOnCurveTest.cpp
 	mafViewSliceGlobalTest.h mafViewSliceGlobalTest.cpp
 	mafViewCompoundWindowingTest.h mafViewCompoundWindowingTest.cpp
+	mafViewIsosurfaceCompoundTest.h mafViewIsosurfaceCompoundTest.cpp
 )
 
 ADD_EXECUTABLE(mafViewsTests ${PROJECT_SRCS})
