Added volume mirror op

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -11,54 +11,55 @@ SET(PROJECT_SRCS)
 
 IF (MAF_USE_VTK)
   SET(PROJECT_SRCS
-    ${PROJECT_SRCS}
-    mafOpDecomposeTimeVarVME.cpp	    mafOpDecomposeTimeVarVME.h
-    mafOpImporterMSF.cpp				mafOpImporterMSF.h
-    mafOpImporterExternalFile.cpp	    mafOpImporterExternalFile.h
-    mafOpLabelExtractor.cpp	    		mafOpLabelExtractor.h
-    mafOpOpenExternalFile.cpp	    	mafOpOpenExternalFile.h
-    mafOp2DMeasure.cpp	    			mafOp2DMeasure.h
-    mafOpAddLandmark.cpp	    		mafOpAddLandmark.h
-    mafOpExporterBmp.cpp	    		mafOpExporterBmp.h
-    mafOpClipSurface.cpp	    		mafOpClipSurface.h
-    mafOpCreateGroup.cpp	    		mafOpCreateGroup.h
-    mafOpCreateMeter.cpp	    		mafOpCreateMeter.h
-    mafOpCreateSurfaceParametric.cpp	mafOpCreateSurfaceParametric.h
-    mafOpCreateProber.cpp	    		mafOpCreateProber.h
-    mafOpCreateRefSys.cpp	    		mafOpCreateRefSys.h
-    mafOpCreateSlicer.cpp	    		mafOpCreateSlicer.h
-    mafOpCreateSpline.cpp	    		mafOpCreateSpline.h
-    mafOpCreateVolume.cpp	    		mafOpCreateVolume.h
-	mafOpVolumeUnion.cpp	    		mafOpVolumeUnion.h
-    mafOpRemoveCells.cpp	    		mafOpRemoveCells.h
-    mafOpEditMetadata.cpp	    		mafOpEditMetadata.h
-    mafOpExtractIsosurface.cpp	    	mafOpExtractIsosurface.h
-    mafOpFilterSurface.cpp	    		mafOpFilterSurface.h
-    mafOpDecimateSurface.cpp	    	mafOpDecimateSurface.h
-    mafOpConnectivitySurface.cpp	    mafOpConnectivitySurface.h
-    mafOpFilterVolume.cpp	    		mafOpFilterVolume.h
-    mafOpImporterImage.cpp	    		mafOpImporterImage.h
-    mafOpMAFTransform.cpp	    		mafOpMAFTransform.h
-    mafOpExporterMSF.cpp	    		mafOpExporterMSF.h
-    mafOpImporterMSF1x.cpp	    		mafOpImporterMSF1x.h
-    mafOpExporterRaw.cpp	    		mafOpExporterRaw.h
-    mafOpImporterRAWVolume.cpp	    	mafOpImporterRAWVolume.h
-    mafOpReparentTo.cpp	    			mafOpReparentTo.h
-    mafOpExporterSTL.cpp	    		mafOpExporterSTL.h
-    mafOpImporterSTL.cpp	    		mafOpImporterSTL.h
-    mafOpTransformInterface.cpp	    	mafOpTransformInterface.h
-    mafOpValidateTree.cpp	    		mafOpValidateTree.h
-    mafOpVolumeResample.cpp	    		mafOpVolumeResample.h
-    mafOpVOIDensity.cpp	    			mafOpVOIDensity.h
-    mafOpVOIDensityEditor.cpp	    	mafOpVOIDensityEditor.h
-    mafOpImporterVRML.cpp	    		mafOpImporterVRML.h
-    mafOpExporterVTK.cpp	    		mafOpExporterVTK.h
-    mafOpImporterVTK.cpp	    		mafOpImporterVTK.h
-    mafOpCrop.cpp	    				mafOpCrop.h
-    mafOpBooleanSurface.cpp	    		mafOpBooleanSurface.h
-    mafOpEditNormals.cpp	    		mafOpEditNormals.h
-    mafOpApplyTrajectory.cpp	    	mafOpApplyTrajectory.h
-	mafOpGarbageCollectMSFDir.cpp		mafOpGarbageCollectMSFDir.h
+	${PROJECT_SRCS}
+	mafOpDecomposeTimeVarVME.cpp	    mafOpDecomposeTimeVarVME.h
+	mafOpImporterMSF.cpp							mafOpImporterMSF.h
+	mafOpImporterExternalFile.cpp	    mafOpImporterExternalFile.h
+	mafOpLabelExtractor.cpp	    			mafOpLabelExtractor.h
+	mafOpOpenExternalFile.cpp	    		mafOpOpenExternalFile.h
+	mafOp2DMeasure.cpp	    					mafOp2DMeasure.h
+	mafOpAddLandmark.cpp	    				mafOpAddLandmark.h
+	mafOpExporterBmp.cpp	    				mafOpExporterBmp.h
+	mafOpClipSurface.cpp	    				mafOpClipSurface.h
+	mafOpCreateGroup.cpp	    				mafOpCreateGroup.h
+	mafOpCreateMeter.cpp	    				mafOpCreateMeter.h
+	mafOpCreateSurfaceParametric.cpp	mafOpCreateSurfaceParametric.h
+	mafOpCreateProber.cpp	    				mafOpCreateProber.h
+	mafOpCreateRefSys.cpp	    				mafOpCreateRefSys.h
+	mafOpCreateSlicer.cpp	    				mafOpCreateSlicer.h
+	mafOpCreateSpline.cpp	    				mafOpCreateSpline.h
+	mafOpCreateVolume.cpp	    				mafOpCreateVolume.h
+	mafOpVolumeUnion.cpp	    				mafOpVolumeUnion.h
+	mafOpRemoveCells.cpp	    				mafOpRemoveCells.h
+	mafOpEditMetadata.cpp	    				mafOpEditMetadata.h
+	mafOpExtractIsosurface.cpp	    	mafOpExtractIsosurface.h
+	mafOpFilterSurface.cpp	    			mafOpFilterSurface.h
+	mafOpDecimateSurface.cpp	    		mafOpDecimateSurface.h
+	mafOpConnectivitySurface.cpp	    mafOpConnectivitySurface.h
+	mafOpFilterVolume.cpp	    				mafOpFilterVolume.h
+	mafOpImporterImage.cpp	 		   		mafOpImporterImage.h
+	mafOpMAFTransform.cpp	   			 		mafOpMAFTransform.h
+	mafOpExporterMSF.cpp	   			 		mafOpExporterMSF.h
+	mafOpImporterMSF1x.cpp	    			mafOpImporterMSF1x.h
+	mafOpExporterRaw.cpp	    				mafOpExporterRaw.h
+	mafOpImporterRAWVolume.cpp	    	mafOpImporterRAWVolume.h
+	mafOpReparentTo.cpp	    					mafOpReparentTo.h
+	mafOpExporterSTL.cpp	  		  		mafOpExporterSTL.h
+	mafOpImporterSTL.cpp	  		  		mafOpImporterSTL.h
+	mafOpTransformInterface.cpp	    	mafOpTransformInterface.h
+	mafOpValidateTree.cpp	    				mafOpValidateTree.h
+	mafOpVolumeResample.cpp	    			mafOpVolumeResample.h
+	mafOpVOIDensity.cpp	    					mafOpVOIDensity.h
+	mafOpVOIDensityEditor.cpp		    	mafOpVOIDensityEditor.h
+	mafOpImporterVRML.cpp	  		  		mafOpImporterVRML.h
+	mafOpExporterVTK.cpp	  		  		mafOpExporterVTK.h
+	mafOpImporterVTK.cpp	  		  		mafOpImporterVTK.h
+	mafOpCrop.cpp	    								mafOpCrop.h
+	mafOpBooleanSurface.cpp	    			mafOpBooleanSurface.h
+	mafOpEditNormals.cpp	    				mafOpEditNormals.h
+	mafOpApplyTrajectory.cpp	   		 	mafOpApplyTrajectory.h
+	mafOpGarbageCollectMSFDir.cpp			mafOpGarbageCollectMSFDir.h
+	mafOpVolumeMirror.cpp							mafOpVolumeMirror.h
 	###############################
 	
 	mafOpImporterAnsysCommon.cpp	mafOpImporterAnsysCommon.h	
