--- a/Installer/InstallerCommon.nsh.in
+++ b/Installer/InstallerCommon.nsh.in
@@ -66,7 +66,7 @@
 !macroend
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;; defineifexist
+;; defineifexist - Check if file exist in compile time
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;  
 !macro !defineifexist _VAR_NAME _FILE_NAME
 	!tempfile _TEMPFILE
