Updated ExampleApp installer

--- a/Examples/ExampleApp/CMakeLists.txt
+++ b/Examples/ExampleApp/CMakeLists.txt
@@ -7,6 +7,8 @@ SET(PROJECT_SRCS
 	mafOpInteractionOp.h
 	exWizardSample.cpp
 	exWizardSample.h
+	exAppUtils.cpp
+	exAppUtils.h
 )
 
 IF (NOT EXECUTABLE_OUTPUT_PATH)
