Added Volume mirror OP tests

--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -82,6 +82,7 @@ SET(PROJECT_SRCS
 	mafOpSmoothSurfaceTest.h mafOpSmoothSurfaceTest.cpp
 	mafOpTriangulateSurfaceTest.h mafOpTriangulateSurfaceTest.cpp
 	mafOpSurfaceMirrorTest.h mafOpSurfaceMirrorTest.cpp
+	mafOpVolumeMirrorTest.h mafOpVolumeMirrorTest.cpp
 	medOpImporterVTKTest.h medOpImporterVTKTest.cpp
 	mafOpExporterMetersTest.h mafOpExporterMetersTest.cpp
 	mafOpSubdivideTest.h mafOpSubdivideTest.cpp
