mafEventSource is now mafEventBroadcaster. mafEventBase m_Sorce attribute removed. mafVME and mafTransformBase now inherit from mafEventBroadcaster instead of has a m_EventSource attribute. mafAgent code clean (Plug/UnPlugEventSource methods removed). A lot of unused include removed.

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -18,7 +18,7 @@ mafDirectory.cpp		mafDirectory.h
 mafDynamicLoader.cpp	mafDynamicLoader.h
 mafEventBase.cpp		mafEventBase.h
 mafEventSender.h
-mafEventSource.cpp		mafEventSource.h
+mafEventBroadcaster.cpp		mafEventBroadcaster.h
 mafIncludeWIN32.h
 mafIncludeWX.h
 mafIndent.cpp			mafIndent.h
