Added Dependency for Offis Library

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -192,6 +192,10 @@ ENDIF (MAF_USE_VTK)
 ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 
+IF (MAF_USE_OFFIS)
+ ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_Offis_LIBRARY)
+ENDIF (MAF_USE_OFFIS)
+
 ADD_DEPENDENCIES(${PROJECT_NAME} mafCommon vtkMAF mafService)
 
 IF (MAF_USE_VTK)
