Created Abstract side bar class in order to obtain more sidebar flexibility on vertical applications

--- a/Gui/CMakeLists.txt
+++ b/Gui/CMakeLists.txt
@@ -90,6 +90,7 @@ IF (MAF_USE_VTK)
   mafGUIDictionaryWidget.cpp		  mafGUIDictionaryWidget.h
   mafAnimate.cpp					  mafAnimate.h
   mafAttachCamera.cpp				  mafAttachCamera.h
+	mafAbsSideBar.h
   mafSideBar.cpp					  mafSideBar.h
   mafTextKit.cpp					  mafTextKit.h
   mafVTKLog.cpp						  mafVTKLog.h
