Fixed cryptoPP compilation in debug mode

--- a/VME/CMakeLists.txt
+++ b/VME/CMakeLists.txt
@@ -45,6 +45,8 @@ IF (MAF_USE_CRYPTO)
 SET(PROJECT_SRCS  ${PROJECT_SRCS}
   mafCrypt.cpp  							mafCrypt.h
   )
+
+	ADD_DEFINITIONS(-DCRYPTOPP_DISABLE_ASM)
 ENDIF (MAF_USE_CRYPTO)
 
 IF (MAF_USE_ITK)
@@ -137,3 +139,4 @@ ENDIF (MAF_USE_WX)
 IF (MAF_USE_ITK)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_ITK_LIBRARY)
 ENDIF (MAF_USE_ITK)
+
