--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -141,17 +141,16 @@ IF (MAF_USE_VTK)
 	mafOpExporterGRFWS.cpp		mafOpExporterGRFWS.h
 	mafOpExporterLandmarkWS.cpp	mafOpExporterLandmarkWS.h
 	  
-	mafOpMergeDicomSeries.cpp		mafOpMergeDicomSeries.h
 	mafOpExporterFEMCommon.cpp	mafOpExporterFEMCommon.h
-  
   )
 ENDIF (MAF_USE_VTK)
 
-IF (MAF_USE_OFFIS)
+IF (MAF_USE_GDCM)
 SET(PROJECT_SRCS ${PROJECT_SRCS}
     mafOpImporterDicomOffis.cpp	mafOpImporterDicomOffis.h
+		mafDicomTagDefines.h
     )
-ENDIF (MAF_USE_OFFIS)
+ENDIF (MAF_USE_GDCM)
 
 IF(MAF_USE_BTK)
 	 SET(PROJECT_SRCS ${PROJECT_SRCS} mafOpImporterC3D.cpp			mafOpImporterC3D.h)
@@ -188,17 +187,17 @@ ENDIF (MAF_USE_ITK)
 # List libraries that are needed by this project.
 SET(PROJECT_LIBS "mafVME" "mafInteraction")
 
+# Create the library.
+ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
+
 IF (MAF_USE_VTK)
   SET(PROJECT_LIBS ${PROJECT_LIBS} mafCommon vtkCommon vtkMAF)
 ENDIF (MAF_USE_VTK)
 
-# Create the library.
-ADD_LIBRARY(${PROJECT_NAME} ${PROJECT_SRCS})
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
-
-IF (MAF_USE_OFFIS)
- ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_Offis_LIBRARY)
-ENDIF (MAF_USE_OFFIS)
+IF (MAF_USE_GDCM)
+ ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_GDCM_LIBRARY)
+ SET(PROJECT_LIBS ${PROJECT_LIBS} ${GDCM_LIBRARIES})
+ENDIF (MAF_USE_GDCM)
 
 IF (MAF_USE_BTK)
  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_BTK_LIBRARY)
@@ -214,3 +213,7 @@ ENDIF (MAF_USE_VTK)
 IF (MAF_USE_WX)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_WXWIN_LIBRARY)
 ENDIF (MAF_USE_WX)
+
+
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+
