Change LTM to BIC in AboutDialog and Installer

--- a/Installer/InstallerCommon.nsh.in
+++ b/Installer/InstallerCommon.nsh.in
@@ -1,7 +1,7 @@
 /*
-	Installer Common Script for MAF based Applications
+	Installer Common Script for ALBA based Applications
 	Author: Nicola Vanella
-	LTM-IOR 2016
+	BIC-IOR 2019
 */
 
 !ifndef ___InstallerCommon___
