Dicom importer now produce vtkImageData output for regular spacing Dicom volumes

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -151,6 +151,7 @@ ENDIF (MAF_USE_VTK)
 IF (MAF_USE_GDCM)
 SET(PROJECT_SRCS ${PROJECT_SRCS}
     mafOpImporterDicom.cpp	mafOpImporterDicom.h
+		mafOpImporterDicomSliceAccHelper.cpp mafOpImporterDicomSliceAccHelper.h
 		mafDicomTagDefines.h
     )
 ENDIF (MAF_USE_GDCM)
